fix(xugu): 移除 TableSubPartitionManager 中对UI组件的使用